<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context=".pages.auth.AuthActivity">

	<LinearLayout
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintTop_toTopOf="parent"
		android:gravity="center"
		app:layout_constraintBottom_toTopOf="@id/forgetPass_horizontal_1_guide">


		<ImageView
			android:layout_width="64dp"
			android:layout_height="64dp"
			android:src="@drawable/travel"
			android:layout_weight="1"/>


		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textSize="32sp"
			android:layout_gravity="center"
			android:layout_weight="1"
			android:fontFamily="@font/start2d"
			android:text="@string/app_name"
			android:textColor="@color/icon_green"/>


	</LinearLayout>

	<com.google.android.material.textfield.TextInputLayout
		android:id="@+id/frag_forgotPass_til_username"
		style="@style/LoginActEditText"
		android:layout_marginTop="8dp"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintTop_toTopOf="@+id/forgetPass_horizontal_1_guide">

		<EditText
			android:id="@+id/frag_forgotPass_et_username"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:hint="@string/username"
			android:inputType="text" />
	</com.google.android.material.textfield.TextInputLayout>

	<com.google.android.material.textfield.TextInputLayout
		android:id="@+id/frag_forgotPass_til_question"
		style="@style/LoginActEditText"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/frag_forgotPass_til_username">

		<EditText
			android:id="@+id/frag_forgotPass_et_question"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:hint="@string/secret_question"
			android:focusableInTouchMode="false"
			android:focusable="false"
			android:inputType="textMultiLine" />
	</com.google.android.material.textfield.TextInputLayout>


	<com.google.android.material.textfield.TextInputLayout
		android:id="@+id/frag_forgotPass_til_password"
		style="@style/LoginActEditText"
		android:layout_marginTop="8dp"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/frag_forgotPass_til_question">

		<EditText
			android:id="@+id/frag_forgotPass_et_password"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:hint="@string/new_password"
			android:inputType="textPassword" />
	</com.google.android.material.textfield.TextInputLayout>


	<com.google.android.material.textfield.TextInputLayout
		android:id="@+id/frag_forgotPass_til_repeatPass"
		style="@style/LoginActEditText"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/frag_forgotPass_til_password">

		<EditText
			android:id="@+id/frag_forgotPass_et_repeatPass"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:hint="@string/repeat_password"
			android:inputType="textPassword" />
	</com.google.android.material.textfield.TextInputLayout>

	<Button
		android:id="@+id/frag_forgotPass_btn_update"
		style="@style/LoginActButton"
		android:text="@string/update_password"
		android:background="@drawable/signin_button_background"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintTop_toTopOf="@+id/forgetPass_horizontal_2_guide">
	</Button>

	<androidx.constraintlayout.widget.Guideline
		android:id="@+id/forgetPass_horizontal_1_guide"
		style="@style/LoginActHorGuid1"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:orientation="horizontal" />

	<androidx.constraintlayout.widget.Guideline
		android:id="@+id/forgetPass_horizontal_2_guide"
		style="@style/LoginActHorGuid2"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:orientation="horizontal" />

	<com.tuyenmonkey.mkloader.MKLoader
		android:id="@+id/frag_forget_loader"
		android:layout_width="wrap_content"
		android:visibility="gone"
		android:layout_height="wrap_content"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent"
		app:mk_color="@color/icon_green"
		app:mk_type="Whirlpool" />


</androidx.constraintlayout.widget.ConstraintLayout>