<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".pages.auth.AuthActivity">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@id/signup_horizontal_1_guide">


        <ImageView
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:src="@drawable/travel"
            android:layout_weight="1"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="32sp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:textColor="@color/icon_green"

            android:fontFamily="@font/start2d"
            android:text="@string/app_name"/>


    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/signup_email_input"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            style="@style/LoginActEditText"
            app:layout_constraintTop_toTopOf="@+id/signup_horizontal_1_guide">
        <EditText
                android:inputType="textEmailAddress"
                android:id="@+id/signup_email_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/signup_username_input"
            style="@style/LoginActEditText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/signup_email_input">
        <EditText
                android:inputType="text"
                android:id="@+id/signup_username_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/username"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/signup_password_input"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            style="@style/LoginActEditText" app:layout_constraintTop_toBottomOf="@+id/signup_username_input">
        <EditText
                android:inputType="textPassword"
                android:id="@+id/signup_password_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/signup_secretQuestion_input"
            style="@style/LoginActEditText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/signup_password_input">
        <EditText
                android:inputType="textMultiLine"
                android:id="@+id/signup_secretQuestion_edit"
                android:layout_width="match_parent"
                android:focusableInTouchMode="false"
                android:focusable="false"
                android:layout_height="wrap_content"
                android:hint="@string/secret_question"/>
    </com.google.android.material.textfield.TextInputLayout>


    <Button
            android:id="@+id/signup_submit_button"
            style="@style/LoginActButton"
            android:text="@string/signup"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:background="@drawable/signin_button_background"
            app:layout_constraintTop_toTopOf="@+id/signup_horizontal_2_guide">

    </Button>
    <androidx.constraintlayout.widget.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/signup_horizontal_1_guide"
            style="@style/LoginActHorGuid1"
            android:orientation="horizontal"/>

    <androidx.constraintlayout.widget.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/signup_horizontal_2_guide"
            style="@style/LoginActHorGuid2"
            android:orientation="horizontal"/>

    <com.tuyenmonkey.mkloader.MKLoader
        android:id="@+id/frag_signup_loader"
        android:layout_width="wrap_content"
        android:visibility="gone"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:mk_color="@color/icon_green"
        app:mk_type="Whirlpool" />


</androidx.constraintlayout.widget.ConstraintLayout>