<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <ImageView
        android:id="@+id/frag_profile_iv_background"
        android:layout_width="match_parent"
        android:layout_height="104dp"
        android:background="@color/icon_red"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/frag_profile_iv_logout"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_margin="8dp"
        android:src="@drawable/logout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/frag_profile_iv_background" />


    <TextView
        android:id="@+id/frag_profile_tv_username"
        style="@style/BoldLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/frag_profile_iv_background"
        app:layout_constraintStart_toEndOf="@+id/frag_profile_iv_photo"/>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/frag_profile_iv_photo"
        android:layout_width="102dp"
        android:layout_height="102dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="64dp"
        android:src="@drawable/profile_placeholder"
        app:civ_border_color="@color/grey_300"
        app:civ_border_width="2dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/frag_profile_cv_content"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="36dp"
        app:cardElevation="2dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="24dp"
        android:layout_marginEnd="36dp"
        app:cardCornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frag_profile_iv_photo">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/frag_profile_cl_content"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/frag_profile_tx_usernameHeader"
                style="@style/BoldMedium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/realname"
                app:layout_constraintBottom_toBottomOf="@+id/frag_profile_et_realname"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/frag_profile_et_realname" />

            <TextView
                android:id="@+id/frag_profile_tx_emailHeader"
                style="@style/BoldMedium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/email"
                app:layout_constraintBottom_toBottomOf="@+id/frag_profile_et_email"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/frag_profile_et_email" />

            <TextView
                android:id="@+id/frag_profile_tx_ageHeader"
                style="@style/BoldMedium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/age"
                app:layout_constraintBottom_toBottomOf="@+id/frag_profile_et_age"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/frag_profile_et_age" />

            <EditText
                android:id="@+id/frag_profile_et_realname"
                style="@style/Medium"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:enabled="false"
                android:inputType="none"
                android:textAlignment="textEnd"
                android:hint="İsim Girilmedi"
                app:layout_constraintWidth_percent="0.6"
                app:layout_constraintHorizontal_bias="1"
                app:layout_constraintStart_toEndOf="@id/frag_profile_tx_usernameHeader"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/frag_profile_et_email"
                style="@style/Medium"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:enabled="false"
                android:inputType="none"
                android:textAlignment="textEnd"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1"
                app:layout_constraintWidth_percent="0.75"
                app:layout_constraintStart_toEndOf="@id/frag_profile_tx_emailHeader"
                app:layout_constraintTop_toBottomOf="@+id/frag_profile_et_realname" />

            <EditText
                android:id="@+id/frag_profile_et_age"
                style="@style/Medium"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:enabled="false"
                android:inputType="none"
                android:hint="Yaş Girilmedi"
                app:layout_constraintHorizontal_bias="1"
                android:textAlignment="textEnd"
                app:layout_constraintWidth_percent="0.35"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/frag_profile_tx_ageHeader"
                app:layout_constraintTop_toBottomOf="@+id/frag_profile_et_email" />

            <Button
                android:id="@+id/frag_profile_bt_update"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:background="@drawable/signin_button_background"
                android:text="@string/update"
                android:textColor="@color/white"
                app:layout_constraintWidth_percent="0.8"

                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <Button
                android:id="@+id/frag_profile_bt_edit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:background="@drawable/signin_button_background"
                android:text="@string/edit"
                android:textColor="@color/white"
                app:layout_constraintWidth_percent="0.8"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />


            <Button
                android:id="@+id/frag_profile_iv_delete"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="KULLANICIYI SİL"
                android:textColor="@color/white"
                android:visibility="gone"
                android:background="@drawable/signin_button_background"
                app:layout_constraintWidth_percent="0.8"
                app:layout_constraintBottom_toTopOf="@+id/frag_profile_bt_update"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />




        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <com.tuyenmonkey.mkloader.MKLoader
        android:id="@+id/frag_profile_loader"
        android:layout_width="wrap_content"
        android:visibility="gone"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:mk_color="@color/icon_green"
        app:mk_type="Whirlpool" />

</androidx.constraintlayout.widget.ConstraintLayout>